# csvizmo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install
.github/workflows/: lint.yml
crates/csvizmo-can/: Cargo.toml
crates/csvizmo-can/src/: candump.rs  fastpacket.rs  nmea2000.rs  session.rs  tp.rs
crates/csvizmo-can/tests/: can2csv.rs  canstruct.rs
crates/csvizmo-csv/: Cargo.toml
crates/csvizmo-csv/src/: csv.rs
crates/csvizmo-csv/tests/: csvcat.rs
crates/csvizmo-depgraph/: Cargo.toml
crates/csvizmo-depgraph/src/: detect.rs  graph.rs  lib.rs  style.rs
crates/csvizmo-depgraph/src/algorithm/: between.rs  cycles.rs  diamonds.rs  diff.rs  filter.rs  flatten.rs  merge.rs  mod.rs  reverse.rs  select.rs  shorten.rs  simplify.rs  slice.rs  sub.rs
crates/csvizmo-depgraph/src/algorithm/cluster/: graphrs_bridge.rs  lpa.rs  mod.rs
crates/csvizmo-depgraph/src/algorithm/query/: edges.rs  metrics.rs  mod.rs  nodes.rs
crates/csvizmo-depgraph/src/emit/: depfile.rs  dot.rs  mermaid.rs  mod.rs  pathlist.rs  tgf.rs  tree.rs  walk.rs
crates/csvizmo-depgraph/src/parse/: cargo_metadata.rs  cargo_tree.rs  depfile.rs  dot.rs  mermaid.rs  mod.rs  pathlist.rs  style.rs  tgf.rs  tree.rs
crates/csvizmo-depgraph/tests/: depcluster.rs  depconv.rs  depfilter.rs  depquery.rs  deptransform.rs  graphdiff.rs
crates/csvizmo-minpath/: Cargo.toml
crates/csvizmo-minpath/src/: abbreviate.rs  common_prefix.rs  homedir.rs  normalize.rs  prefix.rs  single_letter.rs  transform.rs  unique_suffix.rs
crates/csvizmo-minpath/tests/: minpath.rs
crates/csvizmo-stats/: Cargo.toml
crates/csvizmo-stats/src/: lib.rs  plot.rs  stats.rs
crates/csvizmo-stats/tests/: csvdelta.rs  csvstats.rs
crates/csvizmo-test/: Cargo.toml
crates/csvizmo-test/src/: lib.rs
crates/csvizmo-utils/: Cargo.toml
crates/csvizmo-utils/src/: lib.rs  stdio.rs
csvizmo/: Cargo.toml
csvizmo/src/: counter.rs  csv.rs
csvizmo/src/can/: fastpacket.rs  mod.rs
csvizmo/tests/: mod.rs  test_can2csv.rs  test_canstruct.rs  test_csvcat.rs  test_csvdelta.rs
data/: concurrent-sessions.tp  random-data.csv
data/depconv/: bitbake.curl.pn-buildlist.txt  bitbake.curl.task-depends.dot  cargo-depgraph.dot  cargo-metadata.json  cargo-metadata.json.sh  cargo-tree-features.txt  cargo-tree-features.txt.sh  cargo-tree.txt  cargo-tree.txt.sh  cmake.geos.dot  edge-labels.tgf  find.txt  find.txt.sh  flowchart.mmd  gitfiles.txt  gitfiles.txt.sh  multi-target.d  ninja.geos.dot  ninja.gv  nodes-only.tgf  small.d  small.dot  small.tgf  subgraph.mmd  tree-ascii.txt  tree-ascii.txt.sh  tree.txt  tree.txt.sh
data/iso-export/: AEF Functionalities.csv  AEF Functionality Options.csv
isobus/: Cargo.toml  build.rs
isobus-gen/: Cargo.toml
isobus-gen/src/: lib.rs  manufacturer.rs
isobus/src/: lib.rs  name.rs
scripts/: annotate-tp  bbclasses  canspam  qgsdir
src/: candump.rs  counter.rs  csv.rs  lib.rs  plot.rs  stats.rs  stdio.rs
src/can/: candump.rs  fastpacket.rs  frame.rs  mod.rs  nmea2000.rs  session.rs  tp.rs
src/minpath/: abbreviate.rs  common_prefix.rs  homedir.rs  mod.rs  normalize.rs  prefix.rs  single_letter.rs  transform.rs  unique_suffix.rs
tests/: Cargo.toml  mod.rs  test_can2csv.rs  test_canstruct.rs  test_csvdelta.rs  test_csvstats.rs  test_minpath.rs
