[workspace]
resolver = "3"
members = ["csvizmo", "isobus", "isobus-gen"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
assert_cmd = { version = "2.1.1", features = ["color-auto"] }
byteorder = "1.5.0"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.1"
ctor = "0.6"
eyre = "0.6.12"
gnuplot = "0.0.46"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
itertools-num = "0.1.3"
kernel-density-estimation = "0.2.0"
ordered-float = "5.0.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
