[workspace]
members = ["crates/*", "tests"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
csvizmo-can = { path = "crates/csvizmo-can" }
csvizmo-csv = { path = "crates/csvizmo-csv" }
csvizmo-minpath = { path = "crates/csvizmo-minpath" }
csvizmo-stats = { path = "crates/csvizmo-stats" }
csvizmo-utils = { path = "crates/csvizmo-utils" }

# External dependencies
byteorder = "1.5.0"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.1"
eyre = "0.6.12"
globset = "0.4.18"
gnuplot = "0.0.46"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2"
itertools = "0.14.0"
itertools-num = "0.1.3"
kernel-density-estimation = "0.2.0"
ordered-float = "5.0.0"
pathdiff = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Dev dependencies
assert_cmd = { version = "2.1.1", features = ["color-auto"] }
ctor = "0.6"
pretty_assertions = "1.4.1"
