[package]
name = "csvizmo"
version = "0.4.0"
autotests = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Gizmos for working with CSVs"

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
byteorder.workspace = true
clap.workspace = true
color-eyre.workspace = true
csv.workspace = true
eyre.workspace = true
gnuplot.workspace = true
hex.workspace = true
itertools.workspace = true
itertools-num.workspace = true
kernel-density-estimation.workspace = true
ordered-float.workspace = true
serde.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
ctor.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
