[package]
name = "csvizmo-minpath"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Path shortening utilities"

[dependencies]
csvizmo-utils.workspace = true
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
globset.workspace = true
indexmap.workspace = true
pathdiff.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
csvizmo-test.workspace = true
pretty_assertions.workspace = true
