[package]
name = "csvizmo-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared utilities for csvizmo"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
